--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>city</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>human</module>
+        <module>civil_registry</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
