--- a/company/pom.xml
+++ b/company/pom.xml
@@ -33,6 +33,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
