Рефакторинг тестов. Обновление Pom файлов, добавление исключений классов в jacoco. Удаление Тестов классов раннеров из Загса

--- a/company/pom.xml
+++ b/company/pom.xml
@@ -59,6 +59,14 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/enums/**</exclude>
+                        <exclude>**/Runner*.class</exclude>
+                        <exclude>**/Citizen*.class</exclude>
+                        <exclude>**/CivilActionComparator.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -75,6 +83,7 @@
                     </execution>
                     <execution>
                         <id>jacoco-check</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -86,7 +95,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum>
+                                            <minimum>0.8</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
