рефакторинг , убрал лишние тесты . пустую строку в company , и убран комментарий в pom civil_registry

--- a/civil_registry/pom.xml
+++ b/civil_registry/pom.xml
@@ -66,7 +66,7 @@
                             <excludes>
                                 <exclude>**/enums/**</exclude>
                                 <exclude>**/Runner*.class</exclude>
-<!--                                <exclude>**/Citizen*.class</exclude>-->
+                                <exclude>**/Citizen*.class</exclude>
                                 <exclude>**/CivilActionComparator.class</exclude>
                             </excludes>
                         </configuration>
